[package]
name = "router_example"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Location",
    "History",
    "Storage",
    "console",
    "EventListener",
    "Event",
    "EventTarget",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
